# cad_generator

./: README.md  crawler.py  openscad_script.scad  openscad_script.stl  output.stl  pyproject.toml  report.md
db/: chroma.sqlite3
src/cad_generator/: crew.py  gui.py  main.py
src/cad_generator/config/: agents.yaml  tasks.yaml
src/cad_generator/tools/: custom_tool.py
